--- a/website replication/replica_stylesheet.css
+++ b/website replication/replica_stylesheet.css
@@ -40,3 +40,11 @@ left_button{
     color: black;
     padding: 10px;
 }
+
+section button{
+    position : inherit;
+    color : black;
+    padding: 5px;
+    size : small;
+    
+}
