--- a/website replication/replica_stylesheet.css
+++ b/website replication/replica_stylesheet.css
@@ -9,6 +9,9 @@ body{
 header{
     padding: 20px;
     text-align: center;
+    background-color: white;
+    font-size : 15px;
+
 }
 
 nav ol{
@@ -35,16 +38,42 @@ nav ol li{
     position: relative;
 }
 
-left_button{
+.left_button{
     background-color: linear-gradient(to-right,white);
-    color: black;
-    padding: 10px;
+    color: blue;
+    padding: px;
+    size : medium;
+    position: inherit;
+    border-radius : 50px;
+    margin : 20px;
+
 }
 
 section button{
     position : inherit;
     color : black;
     padding: 5px;
+    margin : 22px;
+    border-radius : 50px;
     size : small;
+
+}
+
+button{
+    position : inherit;
+    color : black;
+    padding: 5px;
+    border-radius : 50px;
+    size : small;
+}
+
+li button{
+    background-color: white;
+    border-style : solid;
+    border-color : black;
+    padding : 5px;
+    font-size : 15px;
+    cursor : pointer;
     
+
 }
