--- a/website replication/replica_stylesheet.css
+++ b/website replication/replica_stylesheet.css
@@ -6,11 +6,26 @@ body{
     color : black;
 
 }
+
 header{
-    padding: 20px;
+    padding: 5px;
     text-align: center;
     background-color: white;
     font-size : 15px;
+    border-radius : 50px;
+    
+
+}
+
+header button{
+    margin-left: 10px;
+    background-color: white;
+    border-style : solid;
+    border-color : black;
+    padding : 10px;
+    font-size : 15px;
+    cursor : pointer;
+    
 
 }
 
@@ -46,17 +61,15 @@ nav ol li{
     position: inherit;
     border-radius : 50px;
     margin : 20px;
-
 }
 
 section button{
     position : inherit;
     color : black;
-    padding: 5px;
-    margin : 22px;
+    padding: 10px;
+    margin :15px;
     border-radius : 50px;
     size : small;
-
 }
 
 button{
@@ -65,6 +78,7 @@ button{
     padding: 5px;
     border-radius : 50px;
     size : small;
+    margin-left: 10px;
 }
 
 li button{
@@ -74,6 +88,30 @@ li button{
     padding : 5px;
     font-size : 15px;
     cursor : pointer;
+}
+
+
+h1 {
+    font-size: 40px;
+    padding : 0px;
+    
+}
+
+body {
+    background-color: rgb(231, 218, 181) ;
+    font-family: Arial, Helvetica, sans-serif;
+    padding : 10px;
+    margin : 10px;
+    color : black;
+}
+
+section {
+    padding : 10px;
+    margin : 10px;
+    background-color: white ;
+    border-radius : 50px;
+    
+
     
 
 }
