--- a/website replication/replica_stylesheet.css
+++ b/website replication/replica_stylesheet.css
@@ -43,7 +43,7 @@ nav ol li{
 
 }
 .hover-effect{
-    color : rgb(103, 98, 93);
+    color : rgba(206, 165, 124, 0.679);
 
 }
 
@@ -94,10 +94,20 @@ button{
 }
 
 
+a:active{
+    color:rgb(77, 6, 110);
+
+}
+a:hover{
+    color: rgb(66, 156, 225);
+}
+a:visited{
+    color:blueviolet
+}
 
 
 li:hover{
-    background-color: rgb(136, 133, 131);
+    background-color: rgba(223, 160, 117, 0.7);
     color : white;
 
 }
