--- a/website replication/replica_stylesheet.css
+++ b/website replication/replica_stylesheet.css
@@ -2,9 +2,9 @@ body{
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #a8a7a7;
     color : black;
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
@@ -25,10 +25,15 @@ header button{
     padding : 10px;
     font-size : 15px;
     cursor : pointer;
+    position : inherit;
     
 
 }
-
+#div1{
+    color: orange;
+    background-color: lightblue;
+    border-radius : 50px;
+}
 nav ol{
     color: black;
     padding:0;
@@ -48,11 +53,12 @@ nav ol li{
 }
 
 .background-image{
-    background-image: url('corporate_lady.jpeg');
+    background-image: url('soft_blur.jpg');
     background-size: cover;
     background-position: center;
     height: 400px;
     position: relative;
+    opacity: background-image 0.5;
 }
 
 .left_button{
@@ -84,7 +90,7 @@ button{
 }
 
 
-@media(max-width:1200px){
+@media(max-width:1000px){
     button {
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-size: 10px;
@@ -93,14 +99,20 @@ button{
     }
 }
 
+@media(min-width:800px){
+    #div1{
+        display: none;
+    }
+}
 
 a:active{
     color:rgb(77, 6, 110);
-
 }
+
 a:hover{
     color: rgb(66, 156, 225);
 }
+
 a:visited{
     color:blueviolet
 }
@@ -109,7 +121,6 @@ a:visited{
 li:hover{
     background-color: rgba(223, 160, 117, 0.7);
     color : white;
-
 }
 
 h1 {
@@ -118,19 +129,21 @@ h1 {
     
 }
 
-body {
-    background-color: rgb(231, 218, 181) ;
-    font-family: Arial, Helvetica, sans-serif;
-    padding : 10px;
-    margin : 10px;
-    color : black;
-}
-
 section {
     padding : 10px;
     margin : 10px;
     background-color: white ;
     border-radius : 50px;
     
+}
+
+section div button{
+    position : inherit;
+    color : black;
+    padding: 10px;
+    margin :15px;
+    border-radius : 50px;
+    size : small;
+    opacity: 0.5;
 
 }
