--- a/website replication/replica_stylesheet.css
+++ b/website replication/replica_stylesheet.css
@@ -2,13 +2,13 @@ body{
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color:#ffffff;
+    background-color:#99582a;
     color : black;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
-    padding: 5px;
+    padding: 10px;
     text-align: center;
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -70,19 +70,17 @@ nav ol li{
     cursor : pointer;
 
 }
-.hover-effect{
-    color : rgba(169, 164, 159, 0.679);
 
-}
 .logo{
-    position : absolute;
+    position : relative;
     top : 10px;
     left : 10px;
-    
-
+    height: 10px;
+    width : 10px;
 }
+
 .background-image{
-    background-image: url('soft_blur.jpg');
+    background-image: url('new_bg.png');
     background-size: cover;
     background-position: center;
     height: 400px;
@@ -91,15 +89,21 @@ nav ol li{
 }
 
 .left_button{
-    background-color: linear-gradient(to-right,white);
-    color: blue;
-    padding: px;
-    size : medium;
+    background-color: #FEFAE0;
+    color: white;
+    padding: 10px;
     position: inherit;
     border-radius : 50px;
-    margin : 20px;
+    margin : 10px;
 }
+.left_button :hover{
+    color: black;
 
+}
+.left_button a{
+    text-decoration: none;
+    color : black;
+}
 section button{
     position : inherit;
     color : black;
@@ -125,7 +129,7 @@ button{
     position : inherit;
 
 }
-@media(max-width:1000px){
+@media(max-width:1200px){
     button {
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-size: 10px;
@@ -141,18 +145,18 @@ button{
 }
 
 a:active{
-    color:rgb(77, 6, 110);
+    color:#0f08f0;
 }
 
 a:hover{
-    color: rgb(66, 156, 225);
+    color: rgb(15, 16, 16);
 }
 .ol-links{
     a:visited{
     color:rgb(0, 0, 0)
     };
     li:hover{
-    background-color: rgba(223, 160, 117, 0.7);
+    background-color: rgb(212, 203, 197);
     color : lightgray;
     }
 }
@@ -172,12 +176,85 @@ section {
 }
 
 section div button{
+    background-color: #FEFAE0;
     position : inherit;
-    color : black;
     padding: 10px;
     margin :15px;
     border-radius : 50px;
-    size : small;
-    opacity: 0.5;
+}
+
+.footer-background{
+    padding : 10px;
+    margin : 10px;
+    
+}
+
+.footer-text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    padding : 10px;
+    margin : 10px;
+    position : left;
+    
+}
+.footer-links{
+    font-size: 12px;
+    padding : 10px;
+    margin : 10px;
+    position: center;
+    
+}
+.footer-links a{
+    margin: 10px;
+    color : black;
 
 }
+.footer-links a:hover{
+    color : black;
+}
+
+.social-media {
+    width: 10px;
+    height: 10px;
+    margin-right: 5px;
+    position : right;
+}
+.social-media a{
+    margin: 10px;
+    color : black;
+
+}
+.social-media img {
+    width : 10px;
+    height : 10px;
+}
+
+@media(max-width:1200px){
+    .sidebar{
+    height: 100%;
+    width: 150px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    color: white;
+    font-family: sans-serif;
+    font-size  : 15px;
+    .sidebar a{
+        color: white ;
+        text-decoration-line: none;;
+        padding: 10px;
+
+    }
+
+    background-color: #545e31;
+    padding-top: 15px;
+    }
+    .footer-text{
+        font-size: 15px;
+        
+    }
+    .footer-links{
+        font-size: 10px;
+    }
+    }
+
